# test-python-docs

./: .buildinfo  .gitignore  .readthedocs.yml  .travis.yml  .zenodo.json  LICENSE  README.md  README.rst  genindex.html  index.html  meta.yaml  objects.inv  output.txt  py-modindex.html  python.txt  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  undoc.pickle
.doctrees/: environment.pickle  index.doctree
_modules/: foo.html  index.html
_sources/: index.rst.txt
_static/: documentation_options.js
docs/: Makefile  conf.py  index.rst  requirements.txt
foo/: __init__.py
recipe/: deploy.sh  meta.yaml
tests/: test_foo.py
