[metadata]
name = foo-docs
author = Benoit Seignovert
author-email = support.git@seignovert.fr
summary = Python package example for docs
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
url = https://github.com/seignovert/test-python-docs
license = MIT
classifier = 
    Development Status :: 3 - Alphe
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.6

[files]
packages =
    webgeocalc

[bdist_wheel]
universal = 1

[coverage:report]
exclude_lines =
    def __repr__
