[metadata]
name = foo-docs
author = Benoit Seignovert
author-email = support.git@seignovert.fr
copyright_date = 2019
summary = Python package example for docs
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
url = https://github.com/seignovert/test-python-docs
license = MIT
classifier = 
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.6

[files]
packages =
    foo

[bdist_wheel]
universal = 1

[tool:pytest]
addopts = --verbose

[coverage:report]
show_missing = True
fail_under = 100
exclude_lines =
    def __repr__
