[metadata]
name = foo-autodeploy
author = Benoit Seignovert
author-email = support.git@seignovert.fr
copyright_date = 2019
summary = CI/CD examples to test and deploy python packages from Github
description-file = README.rst
description-content-type = text/x-rst; charset=UTF-8
url = https://github.com/seignovert/test-python-docs
project_urls = 
    Documentation = https://test-python-docs.readthedocs.io/
    Source Code = https://github.com/seignovert/test-python-docs
    TravisCI = https://travis-ci.org/seignovert/test-python-docs
    Coverage = https://coveralls.io/github/seignovert/test-python-docs
    Bug Tracker = https://github.com/seignovert/test-python-docs/issues
license = MIT
classifier = 
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.6

[files]
packages =
    foo

[bdist_wheel]
universal = 1

[tool:pytest]
addopts = --verbose

[coverage:report]
show_missing = True
fail_under = 100
exclude_lines =
    def __repr__

[flake8]
max-line-length = 90
ignore = E302, D300